# obs-floating-recorder

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
src/: floating-recorder-plugin.cpp  floating-window.cpp  floating-window.h  floating-window.ui
